Fixed Mentor button spacing and spacing before/after links on main page

--- a/observatory/media/css/profiles.css
+++ b/observatory/media/css/profiles.css
@@ -14,3 +14,9 @@
   -webkit-box-shadow: 0px 5px 20px #bbb;
   box-shadow: 0px 5px 20px #bbb;
 }
+
+.rcos-mentor {
+	color: #f2f2f2;
+	padding-left: 2px;
+	padding-right: 2px;
+}
